--- a/info.plist
+++ b/info.plist
@@ -21,6 +21,19 @@
 				<false/>
 			</dict>
 		</array>
+		<key>2919750A-B879-4DAB-BA0C-B42781D40583</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>4140A9AB-3DB6-482A-994A-63CE452E6AA1</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
 		<key>29B26D40-733B-4356-A1DF-155FEBA34B68</key>
 		<array>
 			<dict>
@@ -68,7 +81,33 @@
 		<array>
 			<dict>
 				<key>destinationuid</key>
-				<string>4140A9AB-3DB6-482A-994A-63CE452E6AA1</string>
+				<string>B4777745-91DA-4D7B-A99C-984E9B70E4C0</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
+		<key>B4777745-91DA-4D7B-A99C-984E9B70E4C0</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>BF8503ED-5267-483C-8B3B-4CE56CB8AC7C</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
+		<key>BF8503ED-5267-483C-8B3B-4CE56CB8AC7C</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>2919750A-B879-4DAB-BA0C-B42781D40583</string>
 				<key>modifiers</key>
 				<integer>0</integer>
 				<key>modifiersubtext</key>
@@ -132,7 +171,7 @@
 				<key>argumenttype</key>
 				<integer>0</integer>
 				<key>keyword</key>
-				<string>rbcuser</string>
+				<string>r config user</string>
 				<key>subtext</key>
 				<string></string>
 				<key>text</key>
@@ -153,7 +192,7 @@
 				<key>argumenttype</key>
 				<integer>0</integer>
 				<key>keyword</key>
-				<string>rbcpassword</string>
+				<string>r config password</string>
 				<key>subtext</key>
 				<string></string>
 				<key>text</key>
@@ -197,7 +236,7 @@
 				<key>argumenttype</key>
 				<integer>0</integer>
 				<key>keyword</key>
-				<string>rbcurl</string>
+				<string>r config url</string>
 				<key>subtext</key>
 				<string></string>
 				<key>text</key>
@@ -238,14 +277,35 @@
 		<dict>
 			<key>config</key>
 			<dict>
+				<key>browser</key>
+				<string></string>
+				<key>spaces</key>
+				<string></string>
+				<key>url</key>
+				<string>{query}</string>
+				<key>utf8</key>
+				<true/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.action.openurl</string>
+			<key>uid</key>
+			<string>4140A9AB-3DB6-482A-994A-63CE452E6AA1</string>
+			<key>version</key>
+			<integer>1</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
 				<key>alfredfiltersresults</key>
 				<false/>
+				<key>argumenttrimmode</key>
+				<integer>0</integer>
 				<key>argumenttype</key>
 				<integer>2</integer>
 				<key>escaping</key>
 				<integer>102</integer>
 				<key>keyword</key>
-				<string>rmy</string>
+				<string>r my</string>
 				<key>queuedelaycustom</key>
 				<integer>3</integer>
 				<key>queuedelayimmediatelyinitially</key>
@@ -283,12 +343,14 @@
 			<dict>
 				<key>alfredfiltersresults</key>
 				<false/>
+				<key>argumenttrimmode</key>
+				<integer>0</integer>
 				<key>argumenttype</key>
 				<integer>2</integer>
 				<key>escaping</key>
 				<integer>102</integer>
 				<key>keyword</key>
-				<string>rtome</string>
+				<string>r tome</string>
 				<key>queuedelaycustom</key>
 				<integer>3</integer>
 				<key>queuedelayimmediatelyinitially</key>
@@ -324,19 +386,60 @@
 		<dict>
 			<key>config</key>
 			<dict>
-				<key>browser</key>
+				<key>alfredfiltersresults</key>
+				<false/>
+				<key>argumenttrimmode</key>
+				<integer>0</integer>
+				<key>argumenttype</key>
+				<integer>0</integer>
+				<key>escaping</key>
+				<integer>102</integer>
+				<key>queuedelaycustom</key>
+				<integer>3</integer>
+				<key>queuedelayimmediatelyinitially</key>
+				<false/>
+				<key>queuedelaymode</key>
+				<integer>1</integer>
+				<key>queuemode</key>
+				<integer>1</integer>
+				<key>runningsubtext</key>
+				<string>Loading.. please wait</string>
+				<key>script</key>
+				<string>python reviewboard.py search --query-user {query}</string>
+				<key>scriptargtype</key>
+				<integer>0</integer>
+				<key>scriptfile</key>
 				<string></string>
-				<key>spaces</key>
+				<key>subtext</key>
 				<string></string>
-				<key>url</key>
-				<string>{query}</string>
-				<key>utf8</key>
-				<true/>
+				<key>title</key>
+				<string>search review requests to {user}</string>
+				<key>type</key>
+				<integer>0</integer>
+				<key>withspace</key>
+				<false/>
 			</dict>
 			<key>type</key>
-			<string>alfred.workflow.action.openurl</string>
+			<string>alfred.workflow.input.scriptfilter</string>
 			<key>uid</key>
-			<string>4140A9AB-3DB6-482A-994A-63CE452E6AA1</string>
+			<string>2919750A-B879-4DAB-BA0C-B42781D40583</string>
+			<key>version</key>
+			<integer>2</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>matchmode</key>
+				<integer>0</integer>
+				<key>matchstring</key>
+				<string>{var:user}</string>
+				<key>replacestring</key>
+				<string>{var:user}:</string>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.utility.replace</string>
+			<key>uid</key>
+			<string>BF8503ED-5267-483C-8B3B-4CE56CB8AC7C</string>
 			<key>version</key>
 			<integer>1</integer>
 		</dict>
@@ -345,12 +448,14 @@
 			<dict>
 				<key>alfredfiltersresults</key>
 				<false/>
+				<key>argumenttrimmode</key>
+				<integer>0</integer>
 				<key>argumenttype</key>
 				<integer>0</integer>
 				<key>escaping</key>
 				<integer>102</integer>
 				<key>keyword</key>
-				<string>rvu</string>
+				<string>r user</string>
 				<key>queuedelaycustom</key>
 				<integer>3</integer>
 				<key>queuedelayimmediatelyinitially</key>
@@ -383,6 +488,24 @@
 			<key>version</key>
 			<integer>2</integer>
 		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>argument</key>
+				<string>{query}</string>
+				<key>variables</key>
+				<dict>
+					<key>user</key>
+					<string>{query}</string>
+				</dict>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.utility.argument</string>
+			<key>uid</key>
+			<string>B4777745-91DA-4D7B-A99C-984E9B70E4C0</string>
+			<key>version</key>
+			<integer>1</integer>
+		</dict>
 	</array>
 	<key>readme</key>
 	<string></string>
@@ -395,12 +518,19 @@
 			<key>ypos</key>
 			<integer>310</integer>
 		</dict>
+		<key>2919750A-B879-4DAB-BA0C-B42781D40583</key>
+		<dict>
+			<key>xpos</key>
+			<integer>520</integer>
+			<key>ypos</key>
+			<integer>580</integer>
+		</dict>
 		<key>29B26D40-733B-4356-A1DF-155FEBA34B68</key>
 		<dict>
 			<key>xpos</key>
 			<integer>70</integer>
 			<key>ypos</key>
-			<integer>600</integer>
+			<integer>570</integer>
 		</dict>
 		<key>2BBAACFA-C4AA-4930-B905-9A8423BDD073</key>
 		<dict>
@@ -412,9 +542,9 @@
 		<key>4140A9AB-3DB6-482A-994A-63CE452E6AA1</key>
 		<dict>
 			<key>xpos</key>
-			<integer>300</integer>
+			<integer>740</integer>
 			<key>ypos</key>
-			<integer>600</integer>
+			<integer>440</integer>
 		</dict>
 		<key>70DEC438-ED8A-40FA-BE45-1D04D9371B20</key>
 		<dict>
@@ -442,7 +572,21 @@
 			<key>xpos</key>
 			<integer>70</integer>
 			<key>ypos</key>
-			<integer>750</integer>
+			<integer>700</integer>
+		</dict>
+		<key>B4777745-91DA-4D7B-A99C-984E9B70E4C0</key>
+		<dict>
+			<key>xpos</key>
+			<integer>280</integer>
+			<key>ypos</key>
+			<integer>720</integer>
+		</dict>
+		<key>BF8503ED-5267-483C-8B3B-4CE56CB8AC7C</key>
+		<dict>
+			<key>xpos</key>
+			<integer>390</integer>
+			<key>ypos</key>
+			<integer>690</integer>
 		</dict>
 		<key>D4DA56B9-9477-43D7-84F8-A46785630D68</key>
 		<dict>
